--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
   position: absolute;
   bottom: 50px;
   text-align: center;
-  color: #fff; /* Text color for the caption */
+  color: #fff;
 }
 
 /* Custom styles for navigation menu */
@@ -33,23 +33,22 @@ body {
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1000; /* Ensure the navigation menu is on top */
+  z-index: 1000;
 }
 
 .navbar-brand {
-  font-size: 1.5rem; /* Font size of the brand name */
+  font-size: 1.5rem;
 }
 
 .navbar-nav .nav-link {
-  font-size: 1.2rem; /* Font size of the navigation links */
+  font-size: 1.2rem;
 }
-
 .navbar-toggler {
-  border-color: #fff; /* Border color of the toggler button */
+  border-color: #fff;
 }
 
 .navbar-toggler-icon {
-  background-color: #fff; /* Background color of the toggler icon */
+  background-color: #fff;
 }
 
 /* Overlay for the hero section */
@@ -59,7 +58,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Overlay color */
+  background-color: rgba(0, 0, 0, 0.5);
 }
 .photo-gallery {
   padding: 20px;
@@ -74,38 +73,38 @@ body {
 /* Custom styles for the testimonial section */
 #testimonialCarousel {
   background-image: url("https://images.unsplash.com/photo-1528459584353-5297db1a9c01?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NjR8fGJhY2tncm91bmQlMjBpbWFnZXN8ZW58MHx8MHx8fDA%3D"); /* Replace 'your-background-image.jpg' with the path to your image */
-  background-size: cover; /* Ensure the background image covers the entire element */
-  background-position: center; /* Center the background image */
-  padding: 50px; /* Add padding to create space around the content */
-  border-radius: 20px; /* Add border-radius for rounded corners */
+  background-size: cover;
+  background-position: center;
+  padding: 50px;
+  border-radius: 20px;
 }
 /* Custom styles */
 .testimonial-number {
-  font-size: 1.5rem; /* Set font size to 1.5rem (adjust as needed) */
-  color: #ff6600; /* Set color to orange (adjust as needed) */
-  font-weight: bold; /* Set font weight to bold */
+  font-size: 1.5rem;
+  color: #ff6600;
+  font-weight: bold;
 }
 
 .testimonial-author {
-  font-size: 1.2rem; /* Set font size to 1.2rem (adjust as needed) */
-  color: #007bff; /* Set color to blue (adjust as needed) */
-  font-weight: bold; /* Set font weight to bold */
+  font-size: 1.2rem;
+  color: #007bff;
+  font-weight: bold;
 }
 /* Custom styles */
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
-  color: #ff6600 !important; /* Set color to orange (adjust as needed) */
-  font-size: 2rem; /* Set font size to 2rem (adjust as needed) */
+  color: #ff6600 !important;
+  font-size: 2rem;
 }
 /* Custom styles */
 .carousel-control-prev,
 .carousel-control-next {
-  color: black; /* Set color of carousel control buttons to black */
+  color: black;
 }
 
 .carousel-item img {
-  width: 100%; /* Set width of images to fill their container */
-  height: auto; /* Automatically adjust height */
+  width: 100%;
+  height: auto;
 }
 
 .testimonial-content {
@@ -114,18 +113,18 @@ body {
 }
 
 .testimonial-image {
-  width: 50%; /* Set width to 50% of the screen */
-  max-width: 400px; /* Set a maximum width for the image */
-  height: auto; /* Automatically adjust height */
-  margin-right: 20px; /* Adjust spacing between image and text */
+  width: 50%;
+  max-width: 400px;
+  height: auto;
+  margin-right: 20px;
 }
 
 .testimonial-text {
-  flex-grow: 1; /* Allow text to take remaining space */
+  flex-grow: 1;
 }
 
 .testimonial-text p {
-  margin: 0; /* Remove default margins for paragraphs */
+  margin: 0;
 }
 /* Custom styles for contact section */
 #contact {
@@ -140,7 +139,7 @@ body {
 #contact input[type="text"],
 #contact input[type="email"],
 #contact textarea {
-  background-color: rgba(255, 255, 255, 0.5); /* Transparent white background */
+  background-color: rgba(255, 255, 255, 0.5);
   border: none;
   border-radius: 10px;
 }
@@ -154,12 +153,7 @@ body {
   border-color: transparent;
 } */
 #contact .btn-primary:hover {
-  background-color: rgba(
-    255,
-    255,
-    255,
-    0.7
-  ); /* Slightly darker semi-transparent white background */
+  background-color: rgba(255, 255, 255, 0.7);
 }
 .btn btn-primary {
   background-color: darkorchid;
@@ -171,34 +165,34 @@ body {
   border-color: pink;
 }
 .footer {
-  background-color: #333; /* Set background color */
-  color: #fff; /* Set text color */
-  padding: 30px 0; /* Add padding */
+  background-color: #333;
+  color: #fff;
+  padding: 30px 0;
 }
 
 .footer h4 {
-  color: #fff; /* Set heading color */
+  color: #fff;
 }
 
 .footer p {
-  margin-bottom: 10px; /* Add margin between paragraphs */
+  margin-bottom: 10px;
 }
 
 .footer ul {
-  list-style: none; /* Remove bullet points from list */
-  padding-left: 0; /* Remove default padding from list */
+  list-style: none;
+  padding-left: 0;
 }
 
 .footer ul li {
-  display: inline-block; /* Display list items inline */
-  margin-right: 10px; /* Add margin between list items */
+  display: inline-block;
+  margin-right: 10px;
 }
 
 .footer ul li a {
-  color: #fff; /* Set link color */
-  text-decoration: none; /* Remove underline from links */
+  color: #fff;
+  text-decoration: none;
 }
 
 .footer ul li a:hover {
-  text-decoration: underline; /* Add underline on hover */
+  text-decoration: underline;
 }
